# KNNClassifier

./: File.js  README.md  STDIN_ENHANCEMENT.md  demo_stdin_usage.py  pyproject.toml  sample_iris.csv  test_enhanced_features.py  test_improved_stdin.py  test_stdin_functionality.py  verify_improvements.py
.github/workflows/: python-publish.yml
src/knn/: knnclassifier.py
src/knn/dataset/: dataset.py
src/knn/distance/: __init__.py  chebyshev.py  euclidean.py  manhattan.py  strategy.py
src/knn/shell/: main.py
src/knn/voiting/: __init__.py  strategy.py  unweighted.py  weighted.py
src/knn/voting/: __init__.py  strategy.py  unweighted.py
tests/: TShirt_size.csv  test.csv  test_classifier.py  test_distance.py  test_voting.py
